# Genie-Logiciel

./: .gitignore  .qmake.stash  DiseaseForecaster.sln
DiseaseForecaster/: Analyse.cpp  Analyse.h  AnalyseInterface.cpp  AnalyseInterface.h  Attribute.cpp  Attribute.h  CMakeLists.txt  ContinuousAttribute.h  CsvParser.cpp  CsvParser.h  DbManager.cpp  DbManager.h  DiscreteAttribute.cpp  DiscreteAttribute.h  Disease.cpp  Disease.h  DiseaseForecaster.db  DiseaseForecaster.db-journal  DiseaseForecaster.vcxproj  DiseaseForecaster.vcxproj.filters  HealthPrint.cpp  HealthPrint.h  HelpInterface.cpp  HelpInterface.h  Interface.cpp  Interface.h  LeaveInterface.cpp  LeaveInterface.h  Log.cpp  Log.h  LogInterface.cpp  LogInterface.h  MenuInterface.cpp  MenuInterface.h  PotentialDisease.cpp  PotentialDisease.h  SearchInterface.cpp  SearchInterface.h  TAnalyse.cpp  TAnalyse.h  (+6 more)
DiseaseForecaster/Genie-Logiciel-master/DiseaseForecaster/: Interface.cpp  PotentialDisease.cpp  PotentialDisease.h
DiseaseForecaster/Language/: FR_fr.lng
DiseaseForecaster/Ressources/: FR_fr.lng  HealthMeasurements.csv  HealthMeasurements.txt  Rr_rr.lng
DiseaseForecaster/tests/: AbstractTest.cpp  AbstractTest.h  Launcher.h  MethodTest.h  TAnalyse.h  TAttribute.h  TDisease.h  TExample.h  THealthPrint.h
DiseaseForecasterServer/: Attribute.cpp  Attribute.h  ContinuousAttribute.cpp  ContinuousAttribute.h  CsvParser.cpp  CsvParser.h  DbManager.cpp  DbManager.h  DiscreteAttribute.cpp  DiscreteAttribute.h  Disease.cpp  Disease.h  DiseaseForecasterServer.db  DiseaseForecasterServer.vcxproj  ExportInterface.cpp  (+21 more)
(+4 files in other folders)
